gccida/c3/finish_eh_generation
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/except.c:3013:1: error: must use 'enum' tag to refer to type 'eh_region_type'
eh_region_type type; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/except.c:3020:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/except.c:3021:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/except.c:3109:34: error: use of undeclared identifier 'machine_mode'
v3->eh->exc_ptr = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/except.c:3114:42: error: invalid suffix 'xmode' on integer constant
v3->eh->filter = gen_reg_rtx( *(short *)0xmode); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/except.c:3119:14: error: expected identifier or '('
 struct htab = htab_create( 0x1FuLL, ehspec_filter_hash, ehspec_filter_eq, free); 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/except.c:3318:59: error: invalid suffix 'xmode' on integer constant
emit_cmp_and_jump_insns( filter, v48, EQ, 0LL, *(short *)0xmode, 0, v46->label); 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/except.c:3349:56: error: invalid suffix 'xmode' on integer constant
emit_cmp_and_jump_insns( v55, v57, EQ, 0LL, *(short *)0xmode, 0, v52->label); 
                                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/except.c:3457:22: error: use of undeclared identifier 'machine_mode'
v75 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 0); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/except.c:3460:31: error: invalid suffix 'xmode' on integer constant
v77 = gen_rtx_REG( *(short *)0xmode, 1); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/except.c:3470:22: error: use of undeclared identifier 'machine_mode'
v69 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 0); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/except.c:3481:22: error: use of undeclared identifier 'machine_mode'
v71 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 1); 
                     ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_eh_generation/src/obj/except.o] Error 1
